--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,26 @@ plugins {
     id 'java'
 }
 
-group = 'ru.netology.service'
-version = '1.0-SNAPSHOT'
+group 'ru.netology.service'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+
+// кодировка файлов (если используете русский язык в файлах)
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'com.codeborne:selenide:6.13.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
